The changes made in this commit include: - Modified topologies/training-level2-cl/files/menus/training-l2.yaml to update the description for "Routing-Start" from "ROUTING BGP LAB" to "Start ROUTING BGP LAB"

--- a/topologies/training-level2-cl/files/menus/training-l2.yaml
+++ b/topologies/training-level2-cl/files/menus/training-l2.yaml
@@ -11,7 +11,7 @@
       MLAG-Troubleshooting:
         description: "Start TROUBLESHOOTING MLAG LAB"
       Routing-Start:
-        description: "ROUTING BGP LAB"
+        description: "Start ROUTING BGP LAB"
       routing-troubleshooting:
         description: "Start TROUBLESHOOTING ROUTING BGP LAB"
       OSPF-Start:
