--- a/topologies/training-level3-cl/files/menus/training-l3.yaml
+++ b/topologies/training-level3-cl/files/menus/training-l3.yaml
@@ -16,6 +16,8 @@
           - "spine2-base"
         spine3:
           - "spine3-base"
+        spine4:
+          - "spine3-base"
         leaf1:
           - "leaf1-base"
         leaf2:
@@ -27,6 +29,10 @@
         host1:
           - "host1-base"
         host2:
+          - "host2-base"
+        host3:
+          - "host1-base"
+        host4:
           - "host2-base"
         borderleaf1:
           - "borderleaf1-base"
@@ -35,102 +41,87 @@
       l2evpn:
         spine1:
           - "spine1-base"
-          - "Spine-1-VXLAN-Begin"
         spine2:
           - "spine2-base"
-          - "Spine-2-VXLAN-Begin"
         spine3:
           - "spine3-base"
-          - "Spine-3-VXLAN-Begin"
+        spine4:
+          - "spine3-base"
         leaf1:
           - "leaf1-base"
-          - "Leaf-1-VXLAN-Begin"
         leaf2:
           - "leaf2-base"
-          - "Leaf-2-VXLAN-Begin"
         leaf3:
           - "leaf3-base"
-          - "leaf-3-VXLAN-Begin"
         leaf4:
           - "leaf4-base"
-          - "leaf-4-VXLAN-Begin"
         host1:
           - "host1-base"
-          - "Host-1-VXLAN-Begin"
         host2:
           - "host2-base"
-          - "Host-2-VXLAN-Begin"
+        host3:
+          - "host1-base"
+        host4:
+          - "host2-base"
         borderleaf1:
           - "borderleaf1-base"
-          - "Borderleaf-1-VXLAN-Begin"
         borderleaf2:
           - "borderleaf2-base"
-          - "Borderleaf-2-VXLAN-Begin"
       l3evpn:
         spine1:
           - "spine1-base"
-          - "Spine-1-L2EVPN-Begin"
         spine2:
           - "spine2-base"
-          - "Spine-2-L2EVPN-Begin"
         spine3:
           - "spine3-base"
-          - "Spine-3-L2EVPN-Begin"
+        spine4:
+          - "spine3-base"
         leaf1:
           - "leaf1-base"
-          - "Leaf-1-L2EVPN-Begin"
         leaf2:
           - "leaf2-base"
-          - "Leaf-2-L2EVPN-Begin"
         leaf3:
           - "leaf3-base"
-          - "Leaf-3-L2EVPN-Begin"
         leaf4:
           - "leaf4-base"
-          - "Leaf-4-L2EVPN-Begin"
         host1:
           - "host1-base"
-          - "Host-1-L2EVPN-Begin"
         host2:
           - "host2-base"
-          - "Host-2-L2EVPN-Begin"
+        host3:
+          - "host1-base"
+        host4:
+          - "host2-base"
         borderleaf1:
           - "borderleaf1-base"
-          - "Borderleaf-1-L2EVPN-Begin"
         borderleaf2:
           - "borderleaf2-base"
-          - "Borderleaf-2-L2EVPN-Begin"
       multicast:
         spine1:
           - "spine1-base"
-          - "Spine-1-L3EVPN-Begin"
         spine2:
           - "spine2-base"
-          - "Spine-2-L3EVPN-Begin"
         spine3:
           - "spine3-base"
-          - "Spine-3-L3EVPN-Begin"
+        spine4:
+          - "spine3-base"
         leaf1:
           - "leaf1-base"
-          - "Leaf-1-L3EVPN-Begin"
         leaf2:
           - "leaf2-base"
-          - "Leaf-2-L3EVPN-Begin"
         leaf3:
           - "leaf3-base"
-          - "Leaf-3-L3EVPN-Begin"
         leaf4:
           - "leaf4-base"
-          - "Leaf-4-L3EVPN-Begin"
         host1:
           - "host1-base"
-          - "Host-1-L3EVPN-Begin"
         host2:
           - "host2-base"
-          - "Host-2-L3EVPN-Begin"
+        host3:
+          - "host1-base"
+        host4:
+          - "host2-base"
         borderleaf1:
           - "borderleaf1-base"
-          - "Borderleaf-1-L3EVPN-Begin"
         borderleaf2:
           - "borderleaf2-base"
-          - "Borderleaf-2-L3EVPN-Begin"
