--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -1,5 +1,537 @@
 ---
 topologies:
+  dual-datacenter:
+    dev:
+      ceos:
+        cpu: 32
+        ram: 54
+        cvp:
+          2021.2.0:
+            schema: 1
+            resources:
+              cpu: 32
+              ram: 54
+            branch: nested/2021.2
+            orderable: false
+            image: base-atd-dual-datacenter-ceos-c2021-2-0-20211014
+            eos:
+              - 4.27.0F
+          2021.3.0:
+            schema: 1
+            resources:
+              cpu: 40
+              ram: 54
+            branch: nested/2021.3
+            orderable: false
+            image: base-atd-dual-datacenter-ceos-c2021-3-0-20220324u
+            eos:
+              - 4.27.1.1F
+              - 4.27.2F
+          2022.1.0:
+            schema: 1
+            resources:
+              cpu: 40
+              ram: 64
+            branch: nested/2022.1
+            orderable: false
+            image: base-atd-dual-datacenter-ceos-c2022-1-0-20220621
+            eos:
+              - 4.28.1F
+              - 4.27.2F
+    # prod:
+    #   veos:
+    #     cpu: 32
+    #     ram: 64
+    #     cvp:
+    #       2020.2.3:
+    #         branch: nested/2020.2
+    #         image: base-training-l3-e4-24-2-2f-c2020-2-3-20210111
+    #         eos:
+    #           - 4.24.2.2F
+    desc: 'Dual Data Center ATD Topology'
+    name: 'Dual Data Center'
+    title: 'Dual Data Center Lab'
+    disk_size: 500
+    access: admin
+    disable_links: []
+    labguides: self
+  datacenter:
+    dev:
+      ceos:
+        cpu: 32
+        ram: 48
+        cvp:
+          2021.2.2:
+            schema: 1
+            resources:
+              cpu: 32
+              ram: 48
+            branch: nested/2021.2
+            orderable: false
+            image: base-atd-datacenter-ceos-c2021-2-2-20220208
+            eos:
+              - 4.27.1.1F
+              - 4.26.2F
+          2021.3.0:
+            schema: 1
+            resources:
+              cpu: 36
+              ram: 48
+            branch: nested/2021.3
+            orderable: false
+            image: base-atd-datacenter-ceos-c2021-3-0-20220324u
+            eos:
+              - 4.27.1.1F
+              - 4.27.2F
+          2022.1.0:
+            schema: 1
+            resources:
+              cpu: 36
+              ram: 58
+            branch: nested/2022.1
+            orderable: false
+            image: base-atd-datacenter-ceos-c2022-1-0-20220621
+            eos:
+              - 4.28.1F
+              - 4.27.2F
+      veos:
+        cpu: 30
+        ram: 64
+        cvp:
+          2021.1.0:
+            schema: 1
+            resources:
+              cpu: 38
+              ram: 64
+            branch: nested/2021.1
+            orderable: false
+            image: base-atd-datacenter-e4-26-1f-c2021-1-1-20211014
+            eos:
+              - 4.26.1F
+          2021.2.2:
+            schema: 1
+            resources:
+              cpu: 38
+              ram: 64
+            branch: nested/2021.2
+            orderable: false
+            image: base-atd-datacenter-e4-27-1-1f-c2021-2-2-20220208
+            eos:
+              - 4.27.1.1F
+          2021.3.0:
+            schema: 1
+            resources:
+              cpu: 40
+              ram: 64
+            branch: nested/2021.3
+            orderable: false
+            image: base-atd-datacenter-e4-27-2f-c2021-3-0-20220324u
+            eos:
+              - 4.27.2F
+          2022.1.0:
+            schema: 1
+            resources:
+              cpu: 40
+              ram: 74
+            branch: nested/2022.1
+            orderable: false
+            image: base-atd-datacenter-e4-28-1f-c2022-1-0-20220621
+            eos:
+              - 4.28.1F
+          2022.1.0-bare:
+            schema: 1
+            resources:
+              cpu: 40
+              ram: 74
+            branch: nested/2022.1
+            orderable: false
+            image: base-atd-datacenter-e4-28-1f-c2022-1-0-bare-20220628
+            eos:
+              - 4.28.1F
+    prod:
+      ceos:
+        cpu: 24
+        ram: 36
+        cvp:
+          2021.1.1:
+            schema: 1
+            resources:
+              cpu: 32
+              ram: 48
+            branch: v2021.1-20211026a
+            orderable: false
+            image: base-atd-datacenter-ceos-c2021-1-1-20211014
+            eos:
+              - 4.25.2F
+              - 4.26.1F
+          2021.2.0:
+            schema: 1
+            resources:
+              cpu: 32
+              ram: 48
+            branch: v2021.2-20211206a
+            orderable: false
+            image: base-atd-datacenter-ceos-c2021-2-0-20211014
+            eos:
+              - 4.27.0F
+          2021.2.2:
+            schema: 1
+            resources:
+              cpu: 32
+              ram: 48
+            branch: v2021.2-20220404a
+            orderable: false
+            image: base-atd-datacenter-ceos-c2021-2-2-20220208
+            eos:
+              - 4.27.1.1F
+              - 4.26.2F
+          2021.3.0:
+            schema: 1
+            resources:
+              cpu: 36
+              ram: 48
+            branch: v2021.3-20220609a
+            orderable: false
+            image: base-atd-datacenter-ceos-c2021-3-0-20220324u
+            eos:
+              - 4.27.1.1F
+              - 4.27.2F
+      veos:
+        cpu: 30
+        ram: 64
+        cvp:
+          2021.1.1:
+            schema: 1
+            resources:
+              cpu: 38
+              ram: 64
+            branch: v2021.1-20211026a
+            orderable: false
+            image: base-atd-datacenter-e4-26-1f-c2021-1-1-20211014
+            eos:
+              - 4.26.1F
+          2021.2.0:
+            schema: 1
+            resources:
+              cpu: 38
+              ram: 64
+            branch: v2021.2-20211206a
+            orderable: false
+            image: base-atd-datacenter-e4-27-0f-c2021-2-0-20211014
+            eos:
+              - 4.26.2F
+          2021.2.2:
+            schema: 1
+            resources:
+              cpu: 38
+              ram: 64
+            branch: v2021.2-20220404a
+            orderable: false
+            image: base-atd-datacenter-e4-27-1-1f-c2021-2-2-20220208
+            eos:
+              - 4.27.1.1F
+          2021.3.0:
+            schema: 1
+            resources:
+              cpu: 40
+              ram: 64
+            branch: v2021.3-20220609a
+            orderable: false
+            image: base-atd-datacenter-e4-27-2f-c2021-3-0-20220324u
+            eos:
+              - 4.27.2F
+    desc: 'Two Spines, Four Leafs. Focused on EOS fundamentals within the Data Center.'
+    name: 'Datacenter'
+    title: 'Datacenter Lab'
+    disk_size: 300
+    access: standard
+    disable_links: []
+    labguides: self
+  routing:
+    dev:
+      veos:
+        cpu: 44
+        ram: 90
+        cvp:
+          2021.2.2:
+            schema: 1
+            resources:
+              cpu: 44
+              ram: 90
+            branch: nested/2021.2
+            orderable: false
+            image: base-atd-routing-e4-27-1-1f-c2021-2-2-20220208
+            eos:
+              - 4.27.1.1F
+          2021.3.0:
+            schema: 1
+            resources:
+              cpu: 50
+              ram: 90
+            branch: nested/2021.3
+            orderable: false
+            image: base-atd-routing-e4-27-2f-c2021-3-0-20220324u
+            eos:
+              - 4.27.2F
+          2022.1.0:
+            schema: 1
+            resources:
+              cpu: 50
+              ram: 90
+            branch: nested/2022.1
+            orderable: false
+            image: base-atd-routing-e4-28-1f-c2022-1-0-20220621
+            eos:
+              - 4.28.1F
+      ceos:
+        cpu: 32
+        ram: 64
+        cvp:
+          2021.2.2:
+            schema: 1
+            resources:
+              cpu: 32
+              ram: 64
+            branch: nested/2021.2
+            orderable: false
+            image: base-atd-routing-ceos-c2021-2-2-20220208
+            eos:
+              - 4.27.1.1F
+              - 4.26.2F
+          2021.3.0:
+            schema: 1
+            resources:
+              cpu: 36
+              ram: 64
+            branch: nested/2021.3
+            orderable: false
+            image: base-atd-routing-ceos-c2021-3-0-20220324u
+            eos:
+              - 4.27.1.1F
+              - 4.27.2F
+          2022.1.0:
+            schema: 1
+            resources:
+              cpu: 40
+              ram: 64
+            branch: nested/2022.1
+            orderable: false
+            image: base-atd-routing-ceos-c2022-1-0-20220621
+            eos:
+              - 4.28.1F
+              - 4.27.2F
+    prod:
+      ceos:
+        cpu: 24
+        ram: 54
+        cvp:
+          2021.1.1:
+            schema: 1
+            resources:
+              cpu: 32
+              ram: 64
+            branch: v2021.1-20211026a
+            orderable: false
+            image: base-atd-routing-ceos-c2021-1-1-20211014
+            eos:
+              - 4.26.1F
+          2021.2.0:
+            schema: 1
+            resources:
+              cpu: 32
+              ram: 64
+            branch: v2021.2-20211026a
+            orderable: false
+            image: base-atd-routing-ceos-c2021-2-0-20211014
+            eos:
+              - 4.27.0F
+          2021.2.2:
+            schema: 1
+            resources:
+              cpu: 32
+              ram: 64
+            branch: v2021.2-20220404a
+            orderable: false
+            image: base-atd-routing-ceos-c2021-2-2-20220208
+            eos:
+              - 4.27.1.1F
+              - 4.26.2F
+          2021.3.0:
+            schema: 1
+            resources:
+              cpu: 36
+              ram: 64
+            branch: v2021.3-20220404a
+            orderable: false
+            image: base-atd-routing-ceos-c2021-3-0-20220324u
+            eos:
+              - 4.27.1.1F
+              - 4.27.2F
+      veos:
+        cpu: 44
+        ram: 90
+        cvp:
+          2021.2.0:
+            schema: 1
+            resources:
+              cpu: 44
+              ram: 90
+            branch: v2021.2-20211026a
+            orderable: false
+            image: base-atd-routing-e4-27-0f-c2021-2-0-20211018
+            eos:
+              - 4.27.0F
+          2021.2.2:
+            schema: 1
+            resources:
+              cpu: 44
+              ram: 90
+            branch: v2021.2-20220404a
+            orderable: false
+            image: base-atd-routing-e4-27-1-1f-c2021-2-2-20220208
+            eos:
+              - 4.27.1.1F
+          2021.3.0:
+            schema: 1
+            resources:
+              cpu: 50
+              ram: 90
+            branch: v2021.3-20220404a
+            orderable: false
+            image: base-atd-routing-e4-27-2f-c2021-3-0-20220324u
+            eos:
+              - 4.27.2F
+    desc: 'Twenty nodes. Focused on advanced routing, L2VPN and L3VPN topics'
+    name: 'Advanced Routing'
+    title: 'Advanced Routing Lab'
+    disk_size: 300
+    access: standard
+    disable_links: []
+    labguides: self
+  network-to-code:
+    dev:
+      veos:
+        cpu: 32
+        ram: 64
+        cvp:
+          2021.3.0:
+            schema: 1
+            resources:
+              cpu: 32
+              ram: 64
+            branch: nested/2021.3
+            orderable: false
+            image: base-veos-training-ntc-2021-3-20230112-105848
+            eos:
+              - 4.27.2F
+    prod:
+      veos:
+        cpu: 32
+        ram: 64
+        cvp:
+          2020.2.3:
+            schema: 1
+            resources:
+              cpu: 32
+              ram: 64
+            branch: v2020.2-20220404a
+            orderable: false
+            image: base-training-l1-e4-26-0f-c2020-2-3-20211220
+            eos:
+              - 4.26.0F
+          2021.3.0:
+            schema: 1
+            resources:
+              cpu: 32
+              ram: 64
+            branch: 2021.3-3.15
+            orderable: false
+            image: base-veos-training-l1-exam-2021-3-20221130-161201
+            eos:
+              - 4.27.2F
+    desc: 'Topology based of NTC.'
+    name: 'Training - Network To Code lab'
+    title: 'Training Network to Code'
+    disk_size: 300
+    access: standard
+    disable_links: [labguides, jenkins, lab_grading]
+    labguides: self
+  training-level3v2:
+    dev:
+      veos:
+        cpu: 40
+        ram: 110
+        cvp:
+          2022.3.1:
+            schema: 1
+            resources:
+              cpu: 48
+              ram: 110
+            branch: nested/2022.3
+            orderable: true
+            image: base-veos-training-l1-3-2022-3-4291-20230424-175728
+            eos:
+              - 4.29.1F
+    prod:
+      veos:
+        cpu: 60
+        ram: 110
+        cvp:
+          2022.3.1:
+            schema: 1
+            resources:
+              cpu: 48
+              ram: 64
+            branch: 2022.3-3.19-l1-3
+            orderable: true
+            image: base-veos-training-l1-3-2022-3-4291-20230424-175728
+            eos:
+              - 4.29.1F
+    desc: 'Training Level 3 v2'
+    name: 'Training Level 3 v2'
+    title: 'Training Level 3 v2'
+    disk_size: 300
+    access: standard
+    disable_links: [labguides, jenkins, lab_grading]
+    labguides: self
+  training-level-1-3:
+    dev:
+      veos:
+        cpu: 40
+        ram: 110
+        cvp:
+          2022.3.1:
+            schema: 1
+            resources:
+              cpu: 48
+              ram: 110
+            branch: nested/2022.3
+            orderable: true
+            image: base-veos-training-l1-3-2022-3-4291-20230424-175728
+            eos:
+              - 4.29.1F
+    prod:
+      veos:
+        cpu: 60
+        ram: 110
+        cvp:
+          2022.3.1:
+            schema: 1
+            resources:
+              cpu: 48
+              ram: 64
+            branch: 2022.3-3.19-l1-3
+            orderable: true
+            image: base-veos-training-l1-3-2022-3-4291-20230424-175728
+            eos:
+              - 4.29.1F
+    desc: 'Training Level 1-3'
+    name: 'Training Level 1-3'
+    title: 'Training Level 1-3'
+    disk_size: 300
+    access: standard
+    disable_links: [labguides, jenkins, lab_grading]
+    labguides: self
   training-level1:
     dev:
       veos:
