--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -468,7 +468,7 @@ topologies:
               cpu: 48
               ram: 110
             branch: nested/2022.3
-            orderable: true
+            orderable: false
             image: base-veos-training-l1-3-2022-3-4291-20230424-175728
             eos:
               - 4.29.1F
@@ -483,7 +483,7 @@ topologies:
               cpu: 48
               ram: 64
             branch: 2022.3-3.19-l1-3
-            orderable: true
+            orderable: false
             image: base-veos-training-l1-3-2022-3-4291-20230424-175728
             eos:
               - 4.29.1F
@@ -506,7 +506,7 @@ topologies:
               cpu: 48
               ram: 110
             branch: nested/2022.3
-            orderable: true
+            orderable: false
             image: base-veos-training-l1-3-2022-3-4291-20230424-175728
             eos:
               - 4.29.1F
@@ -521,7 +521,7 @@ topologies:
               cpu: 48
               ram: 64
             branch: 2022.3-3.19-l1-3
-            orderable: true
+            orderable: false
             image: base-veos-training-l1-3-2022-3-4291-20230424-175728
             eos:
               - 4.29.1F
@@ -1469,7 +1469,7 @@ topologies:
               cpu: 48
               ram: 110
             branch: nested/2022.3
-            orderable: true
+            orderable: false
             image: level-1-3-container-labs-2022-3
             eos:
               - 4.27.2F
@@ -1479,7 +1479,7 @@ topologies:
               cpu: 48
               ram: 110
             branch: nested/2023.2
-            orderable: true
+            orderable: false
             image: level-1-3-container-labs-2023-2
             eos:
               - 4.30.1F
@@ -1497,7 +1497,7 @@ topologies:
               image: dual-topo-training-level-1-3-cvp
             branch: nested/2023.2
             image: dual-topo-training-level-1-3-eos
-            orderable: true
+            orderable: false
             eos:
               - 4.30.0F 
     prod:
@@ -1511,7 +1511,7 @@ topologies:
               cpu: 48
               ram: 64
             branch: v2022.3-20230922a
-            orderable: true
+            orderable: false
             image: level-1-3-container-labs-2022-3
             eos:
               - 4.27.2F
@@ -1591,7 +1591,7 @@ topologies:
             image: level-1-cl-2023-2
             eos:
               - 4.30.0F
-    desc: 'Training Level - 1'
+    desc: 'Training Level - 1 (NEW)'
     name: 'Training Level - 1'
     title: 'Training Level - 1'
     disk_size: 300
@@ -1629,7 +1629,7 @@ topologies:
             image: level-2-cl-2023-2
             eos:
               - 4.30.0F
-    desc: 'Training Level - 2'
+    desc: 'Training Level - 2 (NEW)'
     name: 'Training Level - 2'
     title: 'Training Level - 2'
     disk_size: 300
@@ -1667,7 +1667,7 @@ topologies:
             image: level-3-cl-2023-2
             eos:
               - 4.30.0F
-    desc: 'Training Level -3'
+    desc: 'Training Level - 3 (NEW)'
     name: 'Training Level - 3'
     title: 'Training Level - 3'
     disk_size: 300
