--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -1591,6 +1591,23 @@ topologies:
             image: level-1-cl-2023-2
             eos:
               - 4.30.0F
+         2023.2.0-dual:
+            schema: 2
+            resources_eos:
+              cpu: 48
+              ram: 110
+              disk: 300
+              image: dual-topo-training-level-1-eos
+            resources_cvp:
+              cpu: 48
+              ram: 110
+              disk: 300
+              image: dual-topo-training-level-1-cvp
+            branch: nested/2023.2-dual
+            image: dual-topo-training-level-1-eos
+            orderable: true
+            eos:
+              - 4.30.0F 
     desc: 'Training Level - 1 (NEW)'
     name: 'Training Level - 1'
     title: 'Training Level - 1'
