--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -1691,3 +1691,41 @@ topologies:
     access: standard
     disable_links: [labguides, jenkins, lab_grading]
     labguides: self
+  training-fxg:
+    dev:
+      ceos:
+        cpu: 40
+        ram: 110
+        cvp:
+          2023.2.0:
+            schema: 1
+            resources:
+              cpu: 48
+              ram: 110
+            branch: nested/2023.2
+            orderable: true
+            image: training-fxg-cl-2023-2
+            eos:
+              - 4.30.0F
+    prod:
+      ceos:
+        cpu: 60
+        ram: 110
+        cvp:
+          2023.2.0:
+            schema: 1
+            resources:
+              cpu: 48
+              ram: 64
+            branch: nested/2023.2
+            orderable: false
+            image: training-fxg-cl-2023-2
+            eos:
+              - 4.30.0F
+    desc: 'Training FXG'
+    name: 'Training FXG'
+    title: 'Training FXG'
+    disk_size: 300
+    access: standard
+    disable_links: [labguides, jenkins, lab_grading]
+    labguides: self
