--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -1672,7 +1672,7 @@ topologies:
               cpu: 48
               ram: 64
             branch: v2023.2-0103024
-            orderable: true
+            orderable: false
             image: level-1-cl-2023-2
             eos:
               - 4.30.1F
@@ -1727,7 +1727,7 @@ topologies:
               cpu: 48
               ram: 64
             branch: v2023.2-0103024
-            orderable: true
+            orderable: false
             image: level-2-cl-2023-2
             eos:
               - 4.30.1F
