--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -1771,6 +1771,23 @@ topologies:
             image: level-3-cl-2023-2
             eos:
               - 4.30.1F
+          2023.2.0-dual:
+            schema: 2
+            resources_eos:
+              cpu: 48
+              ram: 110
+              disk: 50
+              image: dual-topo-training-level-3-eos
+            resources_cvp:
+              cpu: 48
+              ram: 110
+              disk: 100
+              image: dual-topo-training-level-3-cvp
+            branch: nested/2023.2-dual
+            image: dual-topo-training-level-3-eos
+            orderable: true
+            eos:
+              - 4.30.1F 
     prod:
       ceos:
         cpu: 60
@@ -1782,10 +1799,27 @@ topologies:
               cpu: 48
               ram: 64
             branch: v2023.2-0103024
-            orderable: true
+            orderable: false
             image: level-3-cl-2023-2
             eos:
               - 4.30.1F
+          2023.2.0-dual:
+            schema: 2
+            resources_eos:
+              cpu: 48
+              ram: 110
+              disk: 50
+              image: dual-topo-training-level-3-eos
+            resources_cvp:
+              cpu: 48
+              ram: 110
+              disk: 100
+              image: dual-topo-training-level-3-cvp
+            branch: v2023.2-dual-03012024
+            image: dual-topo-training-level-3-eos
+            orderable: true
+            eos:
+              - 4.30.1F         
     desc: 'Training Level - 3 (NEW)'
     name: 'Training Level - 3'
     title: 'Training Level - 3'
