--- a/nested-labvm/atd-docker/docker-compose.yml
+++ b/nested-labvm/atd-docker/docker-compose.yml
@@ -106,6 +106,7 @@ services:
     volumes:
       - /etc/atd:/etc/atd:ro
       - /opt/atd:/opt/atd:ro
+      - /root/labguides/web/:/root/labguides/web/:rw
     networks:
       - atd_nginx
   freerad:
