updated dev l1-cl, l2-cl, l3-cl with new images that contain labguides
updated dev l1-cl, l2-cl, l3-cl with new images that contain labguides

--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -1658,7 +1658,7 @@ topologies:
               ram: 110
             branch: nested/2023.2
             orderable: true
-            image: level-1-cl-2023-2
+            image: level-1-cl-2023-2-01172024
             eos:
               - 4.30.1F
     prod:
@@ -1713,7 +1713,7 @@ topologies:
               ram: 110
             branch: nested/2023.2
             orderable: true
-            image: level-2-cl-2023-2
+            image: level-2-cl-2023-2-01172024
             eos:
               - 4.30.1F
     prod:
@@ -1768,7 +1768,7 @@ topologies:
               ram: 110
             branch: nested/2023.2
             orderable: true
-            image: level-3-cl-2023-2
+            image: level-3-cl-2023-2-01172024
             eos:
               - 4.30.1F
           2023.2.0-dual:
