added hosts for cvp configs
added hosts for cvp configs

--- a/topologies/training-fxg/files/cvp/cvp_info.yaml
+++ b/topologies/training-fxg/files/cvp/cvp_info.yaml
@@ -9,6 +9,9 @@ cvp_info:
       - Core-2
       - Access-1
       - Access-2
+      - host-1
+      - host-11
+      - host-12
   snapshots:
   configlets:
     containers:
@@ -29,3 +32,9 @@ cvp_info:
         - Access-1-BASE
       Access-2:
         - Access-2-BASE
+      host-1:
+        - host-1-BASE
+      host-11:
+        - host-11-BASE
+      host-12:
+        - host-12-BASE
