--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -1840,11 +1840,25 @@ topologies:
               ram: 110
             branch: nested/2023.2
             orderable: true
+            image: training-fxg-cl-2023-2
+            eos:
+              - 4.30.1F
+      veos:
+        cpu: 40
+        ram: 110
+        cvp:
+          2023.2.0:
+            schema: 1
+            resources:
+              cpu: 48
+              ram: 110
+            branch: nested/2023.2
+            orderable: true
             image: training-fxg-cl-veos-2023-2
             eos:
               - 4.30.1F
     prod:
-      ceos:
+      veos:
         cpu: 60
         ram: 110
         cvp:
