fixes in syslog permission issue
fixes in syslog permission issue

--- a/nested-labvm/atd-docker/syslog/src/rsyslog.conf
+++ b/nested-labvm/atd-docker/syslog/src/rsyslog.conf
@@ -34,13 +34,13 @@ $RepeatedMsgReduction on
 #
 # Set the default permissions for all log files.
 #
-$FileOwner syslog
-$FileGroup adm
+$FileOwner root
+$FileGroup root
 $FileCreateMode 0777
 $DirCreateMode 0777
 $Umask 0022
-$PrivDropToUser syslog
-$PrivDropToGroup adm
+$PrivDropToUser root
+$PrivDropToGroup root
 
 #
 # Where to place spool and state files
