--- a/topologies/base_topo.yml
+++ b/topologies/base_topo.yml
@@ -1129,7 +1129,7 @@ topologies:
             resources:
               cpu: 60
               ram: 90
-            branch: v2023.2-0115024
+            branch: v2023.2-0126024
             orderable: true
             image: base-veos-training-l4-v2-2023-2-4301-20231116
             eos:
@@ -1139,7 +1139,7 @@ topologies:
     title: 'Training Level 4 Lab'
     disk_size: 300
     access: standard
-    disable_links: [labguides, jenkins, lab_grading]
+    disable_links: [ jenkins, lab_grading]
     labguides: self
   training-level4-v2:
     dev:
@@ -1187,7 +1187,7 @@ topologies:
             resources:
               cpu: 60
               ram: 90
-            branch: v2023.2-0115024
+            branch: v2023.2-0126024
             orderable: true
             image: base-veos-training-l4-v2-2023-2-4301-20231116
             eos:
@@ -1197,7 +1197,7 @@ topologies:
     title: 'Training Level 4 Lab'
     disk_size: 500
     access: standard
-    disable_links: [labguides, jenkins, lab_grading]
+    disable_links: [ jenkins, lab_grading]
     labguides: self
   training-level4-exam:
     dev:
@@ -1671,7 +1671,7 @@ topologies:
             resources:
               cpu: 48
               ram: 64
-            branch:  v2023.2-0115024
+            branch:  v2023.2-0126024
             orderable: true
             image: level-1-cl-2023-2
             eos:
@@ -1698,7 +1698,7 @@ topologies:
     title: 'Training Level - 1'
     disk_size: 300
     access: standard
-    disable_links: [labguides, jenkins, lab_grading]
+    disable_links: [ jenkins, lab_grading]
     labguides: self
   training-level-2-cl:
     dev:
@@ -1726,7 +1726,7 @@ topologies:
             resources:
               cpu: 48
               ram: 64
-            branch:  v2023.2-0115024
+            branch:  v2023.2-0126024
             orderable: true
             image: level-2-cl-2023-2
             eos:
@@ -1753,7 +1753,7 @@ topologies:
     title: 'Training Level - 2'
     disk_size: 300
     access: standard
-    disable_links: [labguides, jenkins, lab_grading]
+    disable_links: [ jenkins, lab_grading]
     labguides: self
   training-level-3-cl:
     dev:
@@ -1798,7 +1798,7 @@ topologies:
             resources:
               cpu: 48
               ram: 64
-            branch:  v2023.2-0115024
+            branch:  v2023.2-0126024
             orderable: true
             image: level-3-cl-2023-2
             eos:
@@ -1825,7 +1825,7 @@ topologies:
     title: 'Training Level - 3'
     disk_size: 300
     access: standard
-    disable_links: [labguides, jenkins, lab_grading]
+    disable_links: [ jenkins, lab_grading]
     labguides: self
   training-fxg:
     dev:
