--- a/nested-labvm/atd-docker/docker-compose.yml
+++ b/nested-labvm/atd-docker/docker-compose.yml
@@ -85,7 +85,7 @@ services:
       - /opt/ceos:/opt/ceos:rw
   uilanding:
     container_name: atd-uilanding
-    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_uilanding:2.0.2
+    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_uilanding:1.0.16
     restart: always
     environment:
       - PYTHONUNBUFFERED=1
@@ -99,13 +99,14 @@ services:
       - atd_nginx
   labguides:
     container_name: atd-labguides
-    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_labguides:1.0.0
+    image: us.gcr.io/atd-testdrivetraining-dev/atddocker_labguides:1.0.1
     restart: always
     environment:
       - PYTHONUNBUFFERED=1
     volumes:
       - /etc/atd:/etc/atd:ro
       - /opt/atd:/opt/atd:ro
+      - /opt/labguides/web/:/root/labguides/web/:rw
     networks:
       - atd_nginx
   freerad:
